--- a/Examples/IPlugEffect/projects/IPlugEffect-app.vcxproj.filters
+++ b/Examples/IPlugEffect/projects/IPlugEffect-app.vcxproj.filters
@@ -261,6 +261,9 @@
     <ClInclude Include="..\..\..\IGraphics\Controls\ITabbedPanel.h">
       <Filter>IGraphics\Controls</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\IGraphics\Controls\IControlPropsEditor.h">
+      <Filter>IGraphics\Controls</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="resources">
@@ -293,6 +296,9 @@
     <Filter Include="IPlug\APP\RTAudioMidi\include">
       <UniqueIdentifier>{649c5de3-b4c2-4de9-8d57-3b1762646259}</UniqueIdentifier>
     </Filter>
+    <Filter Include="resources\img">
+      <UniqueIdentifier>{ddc41e29-ef06-4c49-89ed-2f244d38e192}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\resources\main.rc">
@@ -316,6 +322,9 @@
   <ItemGroup>
     <Image Include="..\resources\IPlugEffect.ico">
       <Filter>resources</Filter>
+    </Image>
+    <Image Include="C:\Users\Mateusz\Desktop\Freemimus\magnet.png">
+      <Filter>resources\img</Filter>
     </Image>
   </ItemGroup>
 </Project>
